--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ a:visited {
 }
 .banner	{
 	width: 75%;
-	height: 710px;
+	height: 670px;
 	background-image: url("../doc/img/frontend/banner02.jpg");
 	background-size: cover;
 	margin:70px auto 0;
@@ -93,7 +93,6 @@ a:visited {
 	height:250px;
 	position:relative;
 	overflow:hidden;
-	text-align:center;
 	margin:0 auto 20px;
 	text-align: center;
 	background-repeat: no-repeat;
@@ -141,7 +140,7 @@ a:visited {
 }
 .content {
 	width: 75%;
-	overflow: auto;
+	overflow: hidden;
 	/*background-color: #CCC;*/
 	margin:0 auto 40px;
 }
@@ -172,38 +171,34 @@ a:visited {
 	height: 400px;
 	background-size: cover;
 	background-color: #fafafa;
+	background-position: 50% 50%;
 	object-fit: cover;
     object-position: center center;
 	float: right;
 	padding: 1%;
+
+	overflow:hidden;
+	text-align: center;
+	background-repeat: no-repeat;
 }
 .pic_b {
 	width: 48%;
 	height: 400px;
 	background-size: cover;
 	background-color: #fafafa;
+	background-position: 50% 50%;
 	object-fit: cover;
     object-position: center center;
 	float: left;
 	padding: 1%;
+	overflow:hidden;
+	text-align: center;
+	background-repeat: no-repeat;
 }
 .v_centrado {
 	display:inline-block;
 	vertical-align:middle;
 	line-height:normal;
-}
-.pic_zoom {
-	width: 100%;
-	height: 800px;
-	background-size: cover;
-	background-repeat: no-repeat;
-    background-position: 50% 50%;
-}
-.dark_tone {
-	width: 100%;
-	height: 800px;
-	background-color: rgba(0,0,0,.3);
-	line-height:800px;
 }
 .pic_description {
 	width: 44%;
@@ -214,6 +209,117 @@ a:visited {
 	line-height:normal;
 	padding: 3%;
 }
+.pic_zoom {
+	width: 70%;
+	height: 800px;
+	overflow: hidden;
+	float: left;
+}
+.pic_details {
+	width: 24%;
+	overflow: auto;
+	display:inline-block;
+	vertical-align:middle;
+	line-height:normal;
+	padding: 3%;
+}
+
+
+
+
+.cajita {
+    width: 32.3%;
+    height: 480px;
+    background-color: #FFF;
+    margin: 0 0.5% 30px;
+    float: left;
+  }
+  .caja_pic {
+    width: 100%;
+    height: 60%;
+    background-color: #999;
+    overflow: hidden;
+  }
+  .caja_pic img {
+    width: 120%;
+    margin: -8% 0 0 -10%;
+  }
+  .caja_txt {
+    width: 90%;
+    height: 30%;
+    background-color: #fafafa;
+    padding:5%;
+    color: #999;
+  }
+
+
+
+
+.bg_about_me {
+	width: 75%;
+	height:1000px;
+	background-image: url("../doc/img/frontend/banner04.jpg");
+	position:relative;
+	overflow:hidden;
+	text-align:center;
+	margin:70px auto;
+	background-repeat: no-repeat;
+	background-position: 100% 0%;
+	/*filter:brightness(0.4);*/
+}
+.bgd_about_me {
+	width: 100%;
+	height:1000px;
+	padding-top: 30px;
+	background-color: rgba(0,0,0,.3);
+}
+
+
+.contact_content{
+	width: 90%;
+	margin: 400px auto 0;
+}
+.separador{
+	width:66%; 
+	/*height:300px;*/
+	padding:0 2%;
+	color: #FFF;
+	text-shadow: 1px 1px 15px #000;
+	/*background:#F63;*/ 
+	float:left;
+}
+.button{
+	background-color: steelblue;
+	color:#FFF;
+	font-size: 14px;
+	border-radius:15px;
+	padding:9px 20px;
+	margin: 0 20px;
+	border: 0;
+}
+.button:hover{
+	background:#FFF;
+	color:#999;	
+	-moz-transition: all 300ms ease-in-out 100ms;
+    -ms-transition: all 300ms ease-in-out 100ms;
+    -o-transition: all 300ms ease-in-out 100ms;
+    -webkit-transition: all 300ms ease-in-out 100ms;
+    transition: all 300ms ease-in-out 100ms;
+}
+.sidebar{
+	width:26%;
+	height:370px;
+	color: #FFF;
+	text-shadow: 1px 1px 15px #000;
+	background-color: rgba(0,0,0,.7);
+	margin-bottom:50px;
+	/*height:300px;*/ 
+	padding:40px 2%;
+	float:left;
+}
+
+
+
 .foot{
 	width: 75%;
 	height: 200px;
